[package]
name = "authzen-opa"
version = "0.1.0-alpha.0"
description = "Open Policy Agent utilities used in authzen."
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
authzen-session = { workspace = true, version = "0.1.0-alpha.0" }
authzen-opa-core = { path = "core", version = "0.1.0-alpha.0" }
authzen-opa-proc-macros = { path = "proc-macros", version = "0.1.0-alpha.0" }

async-trait.workspace = true
serde.workspace = true

[features]
mongodb-tx-cache-backend = ["authzen-opa-core/mongodb-tx-cache-backend"]
