[package]
name = "authzen-proc-macros-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "../../build.rs"

[dependencies]
proc-macro-util.workspace = true
convert_case.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[build-dependencies]
rustc_version.workspace = true
