[package]
name = "authzen-diesel"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "../../build.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
derivative.workspace = true
diesel.workspace = true
lazy_static.workspace = true
paste.workspace = true
scoped-futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

core = { path = "core", package = "authzen-diesel-core" }
proc-macros = { path = "proc-macros", package = "authzen-diesel-proc-macros" }

[build-dependencies]
rustc_version.workspace = true

[features]
bb8 = ["core/bb8"]
deadpool = ["core/deadpool"]
mobc = ["core/mobc"]
mysql = ["core/mysql"]
postgres = ["core/postgres"]
