[package]
name = "authzen-diesel"
version = "0.1.0-alpha.0"
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
authzen-diesel-core = { path = "core", version = "0.1.0-alpha.0" }
authzen-diesel-proc-macros = { path = "proc-macros", version = "0.1.0-alpha.0" }

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
derivative.workspace = true
diesel.workspace = true
lazy_static.workspace = true
paste.workspace = true
scoped-futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[features]
bb8 = ["authzen-diesel-core/bb8"]
deadpool = ["authzen-diesel-core/deadpool"]
mobc = ["authzen-diesel-core/mobc"]
mysql = ["authzen-diesel-core/mysql"]
postgres = ["authzen-diesel-core/postgres"]
