[package]
name = "authzen-diesel-core"
build = "../../../build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
anyhow.workspace = true
async-backtrace.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
derivative.workspace = true
derive_more.workspace = true
diesel.workspace = true
diesel-async.workspace = true
either.workspace = true
futures.workspace = true
itertools.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
scoped-futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

mobc = { version = "^0.7", optional = true }

[features]
bb8 = ["diesel-async/bb8"]
deadpool = ["diesel-async/deadpool"]
mobc = ["diesel-async/mobc", "dep:mobc"]
mysql = ["diesel/mysql", "diesel-async/mysql"]
postgres = ["diesel/postgres", "diesel-async/postgres"]
