[package]
name = "authzen-opa-proc-macros-core"
version = "0.1.0-alpha.0"
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
authzen-proc-macro-util = { workspace = true, version = "0.1.0-alpha.0" }

proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
